apps/ci/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: myportofolio
  name: myportofolio
spec: {}
