apps/ci/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myportofolio
  name: myportofolio
  namespace: my-portofolio
spec:
  selector:
    app: myportofolio
  ports:
    - port: 3000
