apps/ci/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: myportofolio
  name: myportofolio
  namespace: my-portofolio
spec:
  host: myportofolio.apps.cluster-hvt9q.hvt9q.sandbox1172.opentlc.com
  path: /
  port:
    targetPort: 3000
  to:
    kind: Service
    name: myportofolio
    weight: 100
  wildcardPolicy: None
